# CVM-Virtual-Machine

./: CMakeLists.txt  README.md  instructions.txt
include/: ast.h  bytecode.h  compiler.h  lexer.h  parser.h  repl.h  token.h  vm.h
scripts/: calculator.cvm  conditionals.cvm  loops.cvm  variables.cvm
src/: ast.cpp  bytecode.cpp  compiler.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp  vm.cpp
tests/: lexer_tests.cpp  parser_tests.cpp  vm_tests.cpp
